syntax = "proto3";

package trackerProto;

option go_package = "./;trackerProto";

service Tracker {

  rpc RegisterNewPackage(PackageInfo) returns (RegisterResponse) {}

  rpc FindPackageLocation(LocationRequest) returns (stream PackageLocation) {}

}

message PackageInfo {}

message RegisterResponse {}

message LocationRequest {}

message PackageLocation {}
